third_party/move/move-compiler-v2/tests/unit_test/test/expected_failure_bad_value.exp

Diagnostics:
error: Invalid attribute value: only u64 literal values permitted
  ┌─ tests/unit_test/test/expected_failure_bad_value.move:7:35
  │
7 │     #[expected_failure(abort_code=true)]
  │                                   ^^^^

error: Invalid attribute value: only u64 literal values permitted
   ┌─ tests/unit_test/test/expected_failure_bad_value.move:11:35
   │
11 │     #[expected_failure(abort_code=x"")]
   │                                   ^^^

error: Invalid attribute value: only u64 literal values permitted
   ┌─ tests/unit_test/test/expected_failure_bad_value.move:15:35
   │
15 │     #[expected_failure(abort_code=b"")]
   │                                   ^^^

error: Unbound constant `Foo` in module `0x1::A`
   ┌─ tests/unit_test/test/expected_failure_bad_value.move:19:35
   │
19 │     #[expected_failure(abort_code=Foo)]
   │                                   ^^^

error: Invalid attribute value: only u64 literal values permitted
   ┌─ tests/unit_test/test/expected_failure_bad_value.move:23:35
   │
23 │     #[expected_failure(abort_code=@0xC0FFEE)]
   │                                   ^^^^^^^^^
